Fix Print issue

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nametag Generator</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css">
     <style>
     .logo{
         height:130px;
@@ -40,15 +40,15 @@
   <body>
     <div class="printout">
         <div class="row">
-            <div class="col-md-2 text-end logoWrapper">
+            <div class="col-2 text-end logoWrapper">
                 <img class="logo" src="./FPS-Logo-ICON.svg">
             </div>
-            <div class="col-md-8 text-center nameWrapper" >
+            <div class="col-8 text-center nameWrapper" >
                 <span class="name editable" id="name" contentEditable="true">Mr. Marco Dominic Taddei</span>
                 <div class="clear"></div>
                 <span class="title editable" id="title" contentEditable="true">TITLE Goes Here</span>
             </div>
-            <div class="col-md-2 text-start logoWrapper">
+            <div class="col-2 text-start logoWrapper">
                 <img class="logo" src="./FPS-Logo-ICON.svg">
             </div>
         </div>    
